# NWNFileFormats

./: .gitignore  CMakeLists.txt  README  build.bat  build.sh  build_cmakeonly.bat  build_cmakeonly_vs2017.bat  build_vs2017.bat
CLI/: CMakeLists.txt  Main.cpp
Examples/: CMakeLists.txt  Example_2da.cpp  Example_2daMerge.cpp  Example_Bif.cpp  Example_Erf.cpp  Example_Gff.cpp  Example_Key.cpp  Example_KeyBifExtractor.cpp  Example_Tlk.cpp
FileFormats/: 2da.hpp  Bif.hpp  CMakeLists.txt  Erf.hpp  Gff.hpp  Key.hpp  Resource.cpp  Resource.hpp  Tlk.hpp
FileFormats/2da/: 2da_Friendly.cpp  2da_Friendly.hpp  2da_Raw.cpp  2da_Raw.hpp
FileFormats/Bif/: Bif_Friendly.cpp  Bif_Friendly.hpp  Bif_Raw.cpp  Bif_Raw.hpp
FileFormats/Erf/: Erf_Friendly.cpp  Erf_Friendly.hpp  Erf_Raw.cpp  Erf_Raw.hpp
FileFormats/Gff/: Gff_Friendly.cpp  Gff_Friendly.hpp  Gff_Raw.cpp  Gff_Raw.hpp
FileFormats/Key/: Key_Friendly.cpp  Key_Friendly.hpp  Key_Raw.cpp  Key_Raw.hpp
FileFormats/Tlk/: Tlk_Friendly.cpp  Tlk_Friendly.hpp  Tlk_Raw.cpp  Tlk_Raw.hpp
Tools/: CMakeLists.txt  Tool_2daMerge.cpp  Tool_DiffCreature.cpp  Tool_ErfExtractor.cpp  Tool_ErfPacker.cpp  Tool_GeneratePlaceableBlueprints.cpp  Tool_KeyBifExtractor.cpp
Utility/: Assert.cpp  Assert.hpp  Assert.inl  CMakeLists.txt  DataBlock.hpp  MemoryMappedFile.cpp  MemoryMappedFile.hpp  MemoryMappedFile_impl.cpp  MemoryMappedFile_impl.hpp  RAIIWrapper.hpp  StreamWriter.cpp  StreamWriter.hpp  VirtualObject.cpp  VirtualObject.hpp
