add_executable(Example_Bif Example_Bif.cpp)
target_link_libraries(Example_Bif FileFormats)

add_executable(Example_Erf Example_Erf.cpp)
target_link_libraries(Example_Erf FileFormats)

add_executable(Example_Gff Example_Gff.cpp)
target_link_libraries(Example_Gff FileFormats)

add_executable(Example_Key Example_Key.cpp)
target_link_libraries(Example_Key FileFormats)

add_executable(Example_KeyBifExtractor Example_KeyBifExtractor.cpp)
target_link_libraries(Example_KeyBifExtractor FileFormats)